# SPDX-FileCopyrightText: 2025 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "hpqmls"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
openmls = { git = "https://github.com/openmls/openmls.git", branch = "konrad/fs_exporter", features = [
    "extensions-draft-08",
] }
openmls_traits = { git = "https://github.com/openmls/openmls.git", branch = "konrad/fs_exporter", features = [
    "extensions-draft-08",
] }
sha2 = "0.10.9"
tap = "1.0.1"
tls_codec = "0.4.2"

[dev-dependencies]
openmls_basic_credential = { git = "https://github.com/openmls/openmls.git", branch = "konrad/fs_exporter" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls.git", branch = "konrad/fs_exporter" }
